--- a/src/styles/components/_content.scss
+++ b/src/styles/components/_content.scss
@@ -219,7 +219,7 @@
     color: $accent;
     display: block;
     margin: 0 auto;
-    padding: 0 0 28px;
+    padding: 0 0 55px;
     position: relative; // anchor for .sr-only child
     width: 100%;
   }
